--- a/style2.css
+++ b/style2.css
@@ -152,3 +152,5 @@ background-color:white;
 background-color:white;}
 #root > div:nth-child(1) > div.withScreencast > div > div > div > section > div.block-container.css-1y4p8pa.egzxvld4 > div:nth-child(1) > div > div:nth-child(13){
     background-color: #f7fdf8;}
+#distribusi-harga-sewa-indekos{
+    background-color:white;}
